customer get route updated and get description for swagger added
